--- a/docker/python-http-server/Dockerfile
+++ b/docker/python-http-server/Dockerfile
@@ -1,10 +1,10 @@
-FROM ubuntu
+FROM gcr.io/google_appengine/python
 
 RUN virtualenv -p python3 /env
 ENV PATH /env/bin:$PATH
 
-ADD requirements.txt /requirements.txt
-RUN /env/bin/pip install --upgrade pip && /env/bin/pip install -r /requirements.txt
-ADD . /
+ADD requirements.txt /app/requirements.txt
+RUN /env/bin/pip install --upgrade pip && /env/bin/pip install -r /app/requirements.txt
+ADD . /app
 
-ENTRYPOINT python3 http-server.py
+ENTRYPOINT python3 /app/http-server.py
